@@ -1,3 +1,9 @@
+Fri Oct 14 22:26:10 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/optparse/kwargs.rb (OptionParser#define_by_keywords):
+	  [EXPERIMENTAL] extract command line option definitions from the
+	  information of keyword arguments.
+
 Fri Oct 14 18:27:18 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* object.c: Improve documentation for Float conversion.
